v.1.5.0

- added new rpg like gui overlay! Thanks SattesKrokodil for making the gui parts! 
Set your PLAYER_GUI_TYPE in client configs to RPG.
It is now the default gui.

- spell modifier datapacks removed. I realized i can just turn them into stats, that allows for more customization!
- caster has spellmod condition is now caster has stat
- added new datapack stats that can do everything spell modifiers did: cooldown, mana cost, damage etc (per spell)
- changed unique gear datapacks to not use item id for their lang name and desc keys. 
Now follows same naming theme as my other datapacks: modid.type.identifier
- added armor tag to plate armors. Fixes error in plate armor generation (nearly all affixes require armor tag)
- added extra projectiles to spell datapack stat (unused currently, open to modpackers)
- added istargetally condition for spells
- internal code change, statdata split into In Calculation data, and calculated data. Should prevent future bugs as now it's clear what context is given.
But it probably means short term bugs.
- datapack validation now runs after all datapacks are loaded, instead of on server start, this means invalid entries will no longer be shown on client
- "any weapon" spell cast requirement now allows any item to cast the spell. Including non age of exile weapons